src/components/StepWizard/StepWizard.css
.main {
  &.navBar {
    display: grid;
    grid-template-columns: 320px 1fr;

    .navBarList {
      background-color: #267cc9;
      padding: 40px;
      display: grid;
      grid-gap: var(--spacing-xxlarge);
      border-right: 1px solid #979797;
      grid-template-rows: repeat(auto-fill, var(--spacing-large));

      .navStep {
        display: grid;
        grid-template-columns: 20px 1fr;
        grid-gap: 10px;
        align-items: center;
        cursor: not-allowed;

        &.activeStep {
          cursor: unset;

          .stepName {
            color: white;
            font-weight: bold;
          }
          .number {
            background-color: white;
          }
        }

        &.completedStep {
          cursor: pointer;
        }

        .stepName {
          color: var(--grey-100);
        }
        &.nestedStep {
          padding-left: var(--spacing-large);
        }
        .number {
          padding: 1px var(--spacing-xsmall);
          margin-right: var(--spacing-small);
          background-color: #79a5cc;
          border-radius: 50%;
          color: #267cc9;
          text-align: center;
          width: 19px;
          height: 19px;
          display: inline-block;
        }
      }
    }
  }
  .stepDetails {
    padding: var(--spacing-large);
  }
}

.header {
  display: grid;
  justify-content: center;
}

.title {
  color: var(--white);
  font-size: large;
  margin-bottom: var(--spacing-xxlarge);
  font-weight: 600;
}

.completedIcon {
  background-color: var(--green-500);
  border-radius: 50%;
  height: var(--spacing-large);
  width: var(--spacing-large);
}

